src/objects/Approval_Step__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Approver__c</fullName>
        <label>Actual Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>The status of the Approval Step. This value is set by the system and cannot be manually input by users.</description>
        <inlineHelpText>The status of the Approval Step. This value is set by the system and cannot be manually input by users.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Initiated</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved w Comments</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Initiated/Closed</fullName>
                </value>
                <value>
                    <fullName>Initiated/Reopened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Step_Type__c</fullName>
        <label>Approval Step Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Approver</fullName>
                </value>
                <value>
                    <fullName>Group of Approvers - One Approval Needed</fullName>
                </value>
                <value>
                    <fullName>Group of Approvers - All Must Approve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Approver assigned to this Approval Step.</description>
        <inlineHelpText>The Approver assigned to this Approval Step.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>The date the Approval Step was completed (i.e., a decision was made).</description>
        <inlineHelpText>The date the Approval Step was completed (i.e., a decision was made).</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Correspondence_Document__c</fullName>
        <description>The Controlled Document on which this Approval Step is listed.</description>
        <inlineHelpText>The Controlled Document on which this Approval Step is listed.</inlineHelpText>
        <label>Controlled Document</label>
        <referenceTo>Controlled_Document__c</referenceTo>
        <relationshipLabel>Approval Steps</relationshipLabel>
        <relationshipName>Approval_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Correspondence_Type__c</fullName>
        <description>The Document Type of the Controlled Document on which this Approval Step is listed.</description>
        <formula>TEXT(Correspondence_Document__r.Correspondence_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Document Type of the Controlled Document on which this Approval Step is listed.</inlineHelpText>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>The number of business days that elapse after this Approval Step was initiated and before it was completed.</description>
        <inlineHelpText>The number of business days that elapse after this Approval Step was initiated and before it was completed.</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delegate__c</fullName>
        <label>Delegate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delegate</fullName>
                </value>
                <value>
                    <fullName>ExecSec</fullName>
                </value>
                <value>
                    <fullName>Approver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Due_Date__c</fullName>
        <description>The Due Date of the Controlled Document on which this Approval Step is listed.</description>
        <formula>Correspondence_Document__r.Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Due Date of the Controlled Document on which this Approval Step is listed.</inlineHelpText>
        <label>Document Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Stage__c</fullName>
        <description>The Stage of the Controlled Document on which this Approval Step is listed.</description>
        <formula>TEXT(Correspondence_Document__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Stage of the Controlled Document on which this Approval Step is listed.</inlineHelpText>
        <label>Document Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Title__c</fullName>
        <description>The Title of the Controlled Document on which this Approval Step is listed.</description>
        <formula>Correspondence_Document__r.Title_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Title of the Controlled Document on which this Approval Step is listed.</inlineHelpText>
        <label>Document Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>The date this Approval Step is due.</description>
        <inlineHelpText>The date this Approval Step is due.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exec_Sec_Proxy_Approval_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exec Sec Proxy Approval Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Review_Party__c</fullName>
        <description>When the &quot;Role of Approver&quot; is marked as &quot;External Review&quot;, this field indicates the external party that is conducting the review.</description>
        <inlineHelpText>When the &quot;Role of Approver&quot; is marked as &quot;External Review&quot;, this field indicates the external party that is conducting the review.</inlineHelpText>
        <label>External Review Party</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field marks this Approval Step as no longer being needed. Approval Steps that have been initiated will be recalled. At a later time, this field can be unchecked to reinstate an Approval Step.</description>
        <inlineHelpText>Checking this field marks this Approval Step as no longer being needed. Approval Steps that have been initiated will be recalled. At a later time, this field can be unchecked to reinstate an Approval Step.</inlineHelpText>
        <label>Deactivate Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_about_Approve_w_Comments__c</fullName>
        <defaultValue>&quot;In order to mark this step with a status of Approved w Comments, you must first mark the step as Approved. On the following page, you will have the option to mark the step as Approved w Comments.&quot;</defaultValue>
        <description>This field is a read-only field that displays text for the user instructing them to first Approve an Approval Step before attempting to set the status to &quot;Approved w Comments&quot;</description>
        <label>Note:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notification_History_Trigger__c</fullName>
        <description>o	Description: This field is hidden from the end user and is used as a target field for other workflow field updates.   These updates will set this field to a specific value based on the type of Notification action to be logged.   An update to this field will result in a corresponding trigger to log an activity record on the related Controlled Document.</description>
        <label>Notification History Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Step Overdue Notifications</fullName>
                </value>
                <value>
                    <fullName>Step Reminder Notification</fullName>
                </value>
                <value>
                    <fullName>Status Change Notification</fullName>
                </value>
                <value>
                    <fullName>Approval Request</fullName>
                </value>
                <value>
                    <fullName>Access Granted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_Portfolio__c</fullName>
        <description>The Office/Portfolio indicated for the Controlled Document on which this Approval Step is listed.</description>
        <formula>TEXT(Correspondence_Document__r.Sub_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Office/Portfolio indicated for the Controlled Document on which this Approval Step is listed.</inlineHelpText>
        <label>Office / Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>The Service/Staff Office of the Approver.</description>
        <inlineHelpText>The Service/Staff Office of the Approver.</inlineHelpText>
        <label>Approver&apos;s Service/Staff Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>AK - Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>B - Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>C - Office of Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>D - Office of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilian Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H - Office of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>I - Office of the GSA IT</fullName>
                </value>
                <value>
                    <fullName>J - Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L - Office of the General Counsel</fullName>
                </value>
                <value>
                    <fullName>M - Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>O - Office of Customer Experience</fullName>
                </value>
                <value>
                    <fullName>P - Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q - Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S - Office of Congressional and Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>T - Technology Transformation Service</fullName>
                </value>
                <value>
                    <fullName>Y - Federal Permitting Improvement Steering Council</fullName>
                </value>
                <value>
                    <fullName>Z - Office of Strategic Communication</fullName>
                </value>
                <value>
                    <fullName>Region 1A</fullName>
                </value>
                <value>
                    <fullName>Region 1P</fullName>
                </value>
                <value>
                    <fullName>Region 1Q</fullName>
                </value>
                <value>
                    <fullName>Region 2A</fullName>
                </value>
                <value>
                    <fullName>Region 2P</fullName>
                </value>
                <value>
                    <fullName>Region 2Q</fullName>
                </value>
                <value>
                    <fullName>Region 3A</fullName>
                </value>
                <value>
                    <fullName>Region 3P</fullName>
                </value>
                <value>
                    <fullName>Region 3Q</fullName>
                </value>
                <value>
                    <fullName>Region 4A</fullName>
                </value>
                <value>
                    <fullName>Region 4P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Originating_Service_Staff_Office__c</fullName>
        <description>The Originating Service/Staff Office indicated for the Controlled Document on which this Approval Step is listed.</description>
        <formula>TEXT(Correspondence_Document__r.Originating_Office__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Originating Service/Staff Office indicated for the Controlled Document on which this Approval Step is listed.</inlineHelpText>
        <label>Originating Service/Staff Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The Region indicated for the Controlled Document on which this Approval Step is listed.</description>
        <formula>Text(Correspondence_Document__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Region indicated for the Controlled Document on which this Approval Step is listed.</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_of_Approver__c</fullName>
        <description>The role the Approver is playing for this Approval Step.</description>
        <inlineHelpText>The role the Approver is playing for this Approval Step.</inlineHelpText>
        <label>Role of Approver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approver</fullName>
                </value>
                <value>
                    <fullName>Audit Analyst</fullName>
                </value>
                <value>
                    <fullName>Close-Out</fullName>
                </value>
                <value>
                    <fullName>Drafter</fullName>
                </value>
                <value>
                    <fullName>Editor</fullName>
                </value>
                <value>
                    <fullName>Exec Sec Reviewer</fullName>
                </value>
                <value>
                    <fullName>External Review</fullName>
                </value>
                <value>
                    <fullName>FYI</fullName>
                </value>
                <value>
                    <fullName>Office POC</fullName>
                </value>
                <value>
                    <fullName>Signatory</fullName>
                </value>
                <value>
                    <fullName>Subject Matter Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>The order in which this Approval Step will appear on the Controlled Document record.</description>
        <inlineHelpText>The order in which this Approval Step will appear on the Controlled Document record.</inlineHelpText>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date this Approval Step was initiated.</description>
        <inlineHelpText>The date this Approval Step was initiated.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Approval Step</label>
    <nameField>
        <displayFormat>CC-Step{0000000}</displayFormat>
        <label>Approval Step ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Due_Date_must_be_later_than_Start_Date</fullName>
        <active>true</active>
        <description>Due date must be later than start date.</description>
        <errorConditionFormula>IF(ISNEW(), Due_Date__c &lt; Start_Date__c, 
IF( 
AND(NOT(ISPICKVAL(Approval_Status__c,&apos;Initiated/Closed&apos;)), 
NOT(ISPICKVAL(Approval_Status__c,&apos;Initiated/Reopened&apos;))) , Due_Date__c &lt; Start_Date__c, false) 
)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>The Due Date must be later than the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Specify_Ext_Review_Party</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISBLANK( External_Review_Party__c ),  ISPICKVAL(  Role_of_Approver__c  , &quot;External Review&quot;))</errorConditionFormula>
        <errorDisplayField>External_Review_Party__c</errorDisplayField>
        <errorMessage>If &quot;External Review&quot; is selected as the Role of Approver, you must input a value in the &quot;External Review Party&quot; field.</errorMessage>
    </validationRules>
</CustomObject>